# mx-lite

./: .gitattributes  .gitignore  README.md  ai-rules.md  placeholder_commit.txt
.devcontainer/: devcontainer.json  setup-android.sh
.github/workflows/: mx-lite-build.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android-sdk/: .knownPackages
android-sdk/build-tools/33.0.1/: NOTICE.txt  aapt  aapt2  package.xml  source.properties
android-sdk/ndk/25.1.8937393/: CHANGELOG.md  ndk-gdb  ndk-stack  ndk-which  package.xml  source.properties
android-sdk/ndk/25.1.8937393/prebuilt/linux-x86_64/include/: libyasm-stdint.h
android-sdk/ndk/25.1.8937393/shader-tools/linux-x86_64/: glslc  spirv-as  spirv-cfg  spirv-dis  spirv-link  spirv-opt  spirv-reduce  spirv-val
android-sdk/ndk/25.1.8937393/simpleperf/: ChangeLog  pprof_proto_generator.py  profile_pb2.py
android-sdk/ndk/25.1.8937393/simpleperf/doc/: collect_etm_data_for_autofdo.md  executable_commands_reference.md
android-sdk/ndk/25.1.8937393/toolchains/llvm/prebuilt/linux-x86_64/: AndroidVersion.txt  clang_source_info.md  manifest_8490178.xml
android-sdk/platform-tools/: NOTICE.txt  adb  etc1tool  fastboot  hprof-conv  make_f2fs  make_f2fs_casefold  mke2fs  package.xml  sqlite3
android/app/: build.gradle  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  JniBridge.cpp  ass_jni.c  ass_jni.h  ffmpeg_jni.c  ffmpeg_jni.h
android/app/src/main/cpp/player/: AudioDebug.cpp  AudioDebug.h  AudioEngine.cpp  AudioEngine.h  Clock.cpp  Clock.h  VirtualClock.cpp  VirtualClock.h
android/app/src/main/cpp/swdecoder/: NativeSwDecoder.cpp  NativeSwDecoder.h  NativeSwDecoder_jni.cpp
android/app/src/main/java/com/mxlite/app/: MainActivity.kt
android/app/src/main/java/com/mxlite/app/browser/: VideoStoreRepository.kt
android/app/src/main/res/values/: themes.xml
android/app/src/main/res/values-night/: themes.xml
docs/: ARCHITECTURE_AUDIO_VIDEO.md
(+128 files in other folders)
